2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir-view.c (capplet_dir_view_load_dir): Set the window title

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (ccenter_DATA): move Gnome.directory to here

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir.c (capplet_new): Remove annoying debugging output.

	* capplet-dir-view-html.c: Rewritten to use jimmac's new interface.

	* bcg_top.png, title.png, blank.png, active.png: Added.

	* Makefile.am (splash_DATA): Add new pixmap files.

	* gnomecc.glade: Remove ugly toolbar. 

	* capplet-dir-view.[ch]: Remove toolbar-related code.

2001-07-18  Chema Celorio  <chema@celorio.com>

	* capplet-dir.c (get_root_capplet_dir): if the directory is not found, warn
	and exit. Don't coredump
	* main.c (main):

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_cancel_cb):
	(capplet_ok_cb): Explicitly unref the property control

2001-07-13  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Accept window_title
	parameter and use it as the title
	(capplet_activate): Pass entry->name to capplet_control_launch
	(capplet_control_launch): Don't print error and use correct test
	for control_ref == CORBA_OBJECT_NIL

2001-07-13  Kai Lahmann  <kl@linuxfaqs.de>

	* capplet-dir-view-html.c (header_populate): made the header
	smaller - scrolling won't go
	(html_populate): small fixes in html code

2001-07-13  jacob berkman  <jacob@ximian.com>

	* main.c (main): initialize gconf if gtkhtml is gconf-enabled

2001-07-12  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_activate): Fix position of capplet name
	in the Bonobo case
	(capplet_new): Don't abort if the entry says to run gnomecc

2001-07-10  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_ok_cb): Notify property control of apply
	action
	(capplet_control_launch): Store PropertyControl in app

2001-07-09  Bradford Hovinen  <hovinen@ximian.com>
