@@ -1,3 +1,8 @@
+2001-07-19  Richard Hestilow  <hestilow@ximian.com>
+
+	* capplet-dir-view-html.c (main_allocate_cb: New function to
+	compute optimal number of columns. Try resizing, it's fun!
+ 
 2001-07-19  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplet-dir-view.c (capplet_dir_view_load_dir): Set the window title
